[package]
name = "dx"
version = "0.1.0"
authors = ["Florian Franzen <Florian.Franzen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.12.0"
dirs = "2.0"
futures = "0.1"
rand = "0.6"
wasm-timer = "0.1"
void = "1.0"