[package]
name = "dx"
version = "0.1.0"
authors = ["Florian Franzen <Florian.Franzen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.15"
dirs = "2.0"
futures = "0.3"
rand = "0.7"
wasm-timer = "0.2"
void = "1.0"
async-std = "1.5"

[patch.crates-io]
libp2p = { git = 'https://github.com/libp2p/rust-libp2p' }
